feat: add homework 1

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hws2",
-  "homepage": "http://SlavaOST-it.github.io/hws2",
+  "homepage": "https://SlavaOST-it.github.io/auto-homework-master",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
